Adiciona equipe de ex-situ e ajusta pagina de livros.

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -247,6 +247,9 @@
 <div class="item">
   <h3>Maria Lúcia</h3>
   <img src="{{static_url}}/images/equipe/Maria.jpg"/>
-  <p>Doutoranda pela Escola Nacional de Botânica Tropical, possui graduação em Engenharia Florestal pela Universidade de Brasília (1983). Tem experiência na área de conservação e fortalecimento de jardins botânicos. No Instituto de Pesquisas Jardim Botânico do Rio de Janeiro ocupa o cargo de Tecnologista Senior III e integra a equipe do CNCFlora no projeto 'Conservação ex situ.
-    </p>
+  <p>É Doutora pela Escola Nacional de Botânica
+    Tropical, possui graduação em Engenharia Florestal pela Universidade de
+    Brasília. Tem experiência na área de conservação e fortalecimento de jardins
+    botânicos. No Instituto de Pesquisas Jardim Botânico do Rio de Janeiro ocupa
+    o cargo de Tecnologista Senior III e coordena o projeto 'Conservação Ex Situ'.</p>
 </div>
