--- a/templates/content/pt-br/project/ex-situ.html
+++ b/templates/content/pt-br/project/ex-situ.html
@@ -1,9 +1,7 @@
 <h3>Ex-situ</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-    <div class="banner-full"><img src="{{static_url}}/images/vermelha.jpg" /></div>
     <p>Dentre como atribuições fazer CNCFlora, ESTA uma de avaliar o Risco de extinção das Espécies da flora brasileira. Pará ISSO FOI Desenvolvido hum Sistema de Informação that permite uma Participação e Integração de Uma Rede de Especialistas e that armazena, organiza e Gerencia de INFORMAÇÕES Científicas necessárias Pará como avaliações de Risco de extinção de Espécies da flora.</font></font></p>
     <p>A Metodologia adotada permite uma padronização dos esforços Nacionais, assegurando rigor analyses Científico como. A Lista Vermelha Produzida Pelo CNCFlora E Dinâmica e do conforme avaliações como São realizadas OU alteradas, São inseridas no portal, havendo Uma Constante atualização. Disso de Além, que sejam considerados criterios Biológicos e utiliza o Sistema de criterios e CATEGORIAS da IUCN Pará avaliar o Risco de extinção das Espécies.</p>
-    <p><div class="banner-medium"><img src="{{static_url}}/images/img3.jpg" /></div>Segundo a Legislação um breve los Ser Publicada, a Lista de Espécies Ameaçadas avaliadas Como de extinção NAS CATEGORIAS Vulnerável (VU), Em Perigo (EN) e Criticamente em Perigo (CR), DEVE Ser submetida anualmente Pará uma Comissão Nacional de Biodiversidade - CONABIO , com a Participação da Câmara Técnica Permanente de Espécies Ameaçadas de Extinção e de Espécies Ameaçadas de Sobreexplotadas OU Sobreexplotação. De carater Consultivo, a CONABIO delibera Sobre a Lista enviada eA encaminha AO Ministério do Meio Ambiente, that POR SUA Vez atualiza a Lista Oficial de Espécies Ameaçadas de Extinção da Flora Brasileira atraves da Publicação de Uma Instrução Normativa.</p>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <br/>
@@ -61,61 +59,67 @@
   </div>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-<br/>
-<h3>Produção do Projeto</h3>
+  <br/>
+  <h3>Equipe</h3>
+  <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
+    <div class="item">
+      <img src="{{static_url}}/images/equipe/Maria.jpg"/>
+      <p><strong>Maria Lúcia Nova da Costa</strong> É Doutora pela Escola Nacional de Botânica
+        Tropical, possui graduação em Engenharia Florestal pela Universidade de
+        Brasília. Tem experiência na área de conservação e fortalecimento de jardins
+        botânicos. No Instituto de Pesquisas Jardim Botânico do Rio de Janeiro ocupa
+        o cargo de Tecnologista Senior III e coordena o projeto 'Conservação Ex Situ'.<br/>
+        <strong>Email:</strong> lucianova@gmail.com<br/>
+      </div>
+      <div class="item">
+        <img src="{{static_url}}/images/equipe/tamar.jpg"/>
+        <p><strong>Tamar Bajgielman</strong>
+          é Doutora em Antropologia pela University of Kent, UK,
+          Mestre em Etnobotânica pela mesma universidade e graduada em Ciências
+          Biológicas pela Universidade Santa Úrsula.  Tem experiência na área de
+          Antropologia, com ênfase em Antropologia Ambiental, atuando principalmente
+          nos seguintes temas: ecologia política, etnoecologia, conservação e manejo de
+          recursos naturais, agricultura, pesca artesanal, propriedade coletiva e acesso a
+          recursos produtivos.<br/>
+        </div>
+        <div class="item">
+          <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
+          <p><strong>Daniel Maurenza</strong>
+            Biologo e mestre em Ecologia pelo Instituto Nacional de Pesquisas da
+            Amazônia. No CNCFlora faz parte da equipe planejamento de ações para a conservação de
+            espécies ameaçadas de extinção, tendo como atribuição a análise de dados da flora, produção
+            científica e coleta de dados de campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!<br/>
+            <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
+            <strong>Email:</strong> dmaurenza@cncflora.net
+          </p>
+        </div>
+        <div class="item">
+          <img src="{{static_url}}/images/equipe/Rodrigo.jpeg"/>
+          <p><strong>Rodrigo Amaro da Fonseca e Silva</strong>Integrante da equipe do projeto “Lista Vermelha" do
+            atua na avaliação de risco de espécies e composição de documentos técnico-científicos. Participa
+            também de atividades do projeto “Conservação ex situ”. Mestre em Ciência Ambiental (2012) e graduado
+            em Ciências Biológicas (2009) pela Universidade Federal Fluminense - UFF, tem experiências em
+            temáticas interdisciplinares, como gestão ambiental, conservação de espécies ameaçadas, planejamento
+            socioambiental, recuperação de áreas degradadas, educação ambiental, botânica e ecologia.</br>
+            <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4238333Z3" target="_blank">Currículo lattes</a></strong><br/>
+            <strong>Email:</strong> rodrigo@cncflora.net
+            </p>
+          </div>
+          <div class="item">
+            <img src="{{static_url}}/images/equipe/Eduardo.jpeg"/>
+            <p> <strong>Eduardo Dalcin</strong> Doutor em Informática na Biodiversidade pela University of Southampton,
+              (2005), graduado em Ciências Biológicas pela Universidade Gama Filho (1989). Sua experiência e
+              interesses profissionais estão relacionados com: gestão de informação em biodiversidade, governança de
+              dados em biodiversidade, bancos de dados taxonômicos; e qualidade, análise e visualização de dados
+              sobre biodiversidade. Atualmente ocupa o cargo de coordenador do Núcleo de Computação Científica e
+              Geoprocessamento do Instituto de Pesquisas Jardim Botânico do Rio de Janeiro. Membro do comitê
+              técnico-científico do Sistema de Informação sobre a Biodiversidade Brasileira (SiBBr) do MCTI; e do
+              Grupo Técnico da Flora do Mundo Online, meta da GSPC para 2020. No CNCFlora atua como
+              coordenador substituto e faz parte da equipe dos projetos “Planejamento de ações para a conservação de
+              espécies ameaçadas de extinção” e "Projeto Desenvolvimento de sistemas e análises espaciais”.<br/><br/>
+              <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4786576P3" target="_blank">Currículo lattes</a></strong><br/>
+              <strong>Email:</strong> edalcin@jbrj.org</p>
+            </div>
 
-<section class="box-steps">
-  <div class="col-sm-3 col-md-3 col-lg-3 box active">
-    <div class="box-chart chart ">
-        <strong>Produção do Projeto</strong>
-        <div class="layer"></div>
-    </div>
-    <div class="chart-layer">
-    </div>
   </div>
-  <div class="col-sm-3 col-md-3 col-lg-3 box">
-    <div class="box-chart chart">
-        <strong>Produção do Projeto</strong>
-        <div class="layer"></div>
-    </div>
-    <div class="chart-layer">
-    </div>
-  </div>
-  <div class="col-sm-3 col-md-3 col-lg-3 box">
-    <div class="box-chart chart">
-        <strong>Produção do Projeto</strong>
-        <div class="layer"></div>
-    </div>
-    <div class="chart-layer">
-    </div>
-  </div>
-  <div class="col-sm-3 col-md-3 col-lg-3 box">
-    <div class="box-chart chart">
-        <strong>Produção do Projeto</strong>
-        <div class="layer"></div>
-    </div>
-  </div>
-</section>
-</div>
-<div class="box-section col-sm-12 col-md-12 col-lg-12">
-<br/>
-<h3>Equipe</h3>
-<div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
-  <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-  </div>
-  <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-  </div>
-  <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-  </div>
-  <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-  </div>
- </div>
 </div>
