--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -153,8 +153,9 @@
             <ul class="submenu">
 							<li><a href="{{base_url}}/" class="icon ">Home</a></li>
 							<li><a href="{{base_url}}/pt-br/listavermelha" class="icon ">Lista Vermelha</a></li>
-							<li><a href="#" class="icon ">Projetos</a></li>
-							<li><a href="{{base_url}}/pt-br/publicacoes" class="icon ">Documentos</a></li>
+              <li><a href="{{base_url}}/pt-br/projetos" class="icon ">Projetos</a></li>
+              <li><a href="{{base_url}}/pt-br/publicacoes" class="icon ">Documentos</a></li>
+              <li><a href="{{base_url}}/pt-br/livros" class="icon ">Livros</a></li>
 							<li><a href="{{base_url}}/pt-br/equipe" class="icon ">Equipe</a></li>
 							<li><a href="" class="icon link-contato">Contato</a></li>
           </ul>
