--- a/templates/layout.html
+++ b/templates/layout.html
@@ -162,6 +162,7 @@
 							<li><a href="{{base_url}}/pt-br/listavermelha" class="icon ">Lista Vermelha</a></li>
 							<li><a href="{{base_url}}/pt-br/projetos" class="icon ">Projetos</a></li>
 							<li><a href="{{base_url}}/pt-br/publicacoes" class="icon ">Documentos</a></li>
+							<li><a href="{{base_url}}/pt-br/livros" class="icon ">Livros</a></li>
 							<li><a href="{{base_url}}/pt-br/equipe" class="icon ">Equipe</a></li>
 							<li><a href="" class="icon link-contato">Contato</a></li>
 					</ul>
