--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -5,78 +5,65 @@
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <br/>
-  <h3>Produtos</h3>
-  <div class="doc">
-    <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-          <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg"/>
-          <div class="portfolio-overlay">
-            <br/>
-            <p>Livro Vermelho da flora do Brasil, 2014</p>
-
-          </div>
-        </a>
+  <h3>Equipe</h3>
+  <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
+      <div class="item">
+        <img src="{{static_url}}/images/equipe/Thiago.jpeg"/>
+        <p><strong>Thiago Serrano de Almeida Penedo</strong> Graduado em Ciências Biológicas (Bacharelado) pela
+          Universidade Federal do Estado do Rio de Janeiro – UNIRIO (2012). Possui experiência nas áreas de
+          Sistemas de Informação Geográfica, Geoprocessamento e Biologia da Conservação. No CNCFlora faz
+          parte do projeto “Desenvolvimento de sistemas e análises espaciais”, participando das análises espaciais
+          relacionadas a conservação da flora, georreferenciamento e geoprocessamento, redação de artigos
+          científicos e de documentos técnicos ou de divulgação científica.<br/><br/><br/>
+          <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4245432J4" target="_blank">Currículo lattes</a></strong><br/>
+          <strong>Email:</strong>  thiago@cncflora.jbrj.gov.br
+        </p>
       </div>
-    </div>
-    <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-          <img src="{{static_url}}/images/projetos/lista-vermelha/Projeto Capa.jpg"/>
-
-          <div class="portfolio-overlay">
-            <br/>
-            <p>Manual Operacional Avaliação de Risco de Extinção das Espécies Raras do Cerrado</p>
-
-          </div>
-        </a>
+      <div class="item">
+        <img src="{{static_url}}/images/equipe/Diogo.jpeg"/>
+        <p><strong>Diogo Silva</strong> Graduando em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá
+          (conclusão prevista para 2014). Possui experiência no desenvolvimento de portais e aplicações para
+          internet e servidores, em análise e modelagem de sistemas e processos, utilizando tecnologias e
+          ferramentas de código livre (opensource). No CNCFlora faz parte da equipe de “Projeto Desenvolvimento
+          de sistemas e análises espaciais”, onde é responsável pela criação e desenvolvimento do portal
+          CNCFlora, desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e
+          infraestrutura de tecnologia.<br/><br/>
+          <strong>Email:</strong> diogo@cncflora.net
+        </p>
       </div>
-    </div>
-    <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-          <img src="{{static_url}}/images/projetos/lista-vermelha/Guia_de_Comentarios.jpg"/>
-          <div class="portfolio-overlay">
-            <br/>
-            <p>Avaliação de risco de extinção</p>
-
-          </div>
-        </a>
+      <div class="item">
+        <img src="{{static_url}}/images/equipe/Leonardo.jpeg"/>
+        <p><strong>Leonardo Novaes</strong> Graduado em Geografia (Bacharelado) pela Pontifícia Universidade Católica do Rio
+          de Janeiro - PUC (2011). Possui experiência na área de sensoriamento remoto e sistemas de
+          informações geográficas (SIG), atuando principalmente nos seguintes temas: estudos ambientais e
+          geotecnologias. No CNCFlora faz parte da equipe “Projeto Desenvolvimento de sistemas e análises
+          espaciais”, participando na análise de dados, redação de artigos científicos e de documentos técnicos ou
+          de divulgação científica e produção cartográfica.<br/><br/><br/>
+          <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4455856P9" target="_blank">Currículo lattes</a></strong><br/>
+          <strong>Email:</strong> leonardo@cncflora.net
+        </p>
       </div>
-    </div>
-    <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-          <img src="{{static_url}}/images/livrovermelho.png"/>
-          <div class="portfolio-overlay">
-            <br/>
-            <p>Livro Vermelho da flora do Brasil, 2013</p>
-
-          </div>
-        </a>
+      <div class="item">
+        <img src="{{static_url}}/images/equipe/Bruno.jpeg"/>
+        <p><strong>Bruno Giminiani</strong> Graduado em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de
+          Sá - UNESA. Possui experiência no desenvolvimento de aplicações de portais para a internet e
+          desenvolvimento de sistemas e processos utilizando tecnologias e ferramentas de código livre
+          (opensource). No CNCFlora faz parte da equipe de "Projeto Desenvolvimento de sistemas e análises
+          espaciais”, participando do desenvolvimento de sistemas, informatização, implementação e
+          gerenciamento do banco de dados.</p>
       </div>
-    </div>
+      <div class="item">
+        <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
+        <p><strong>Ricardo Avancini Fernandes</strong> Pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado
+          em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da
+          informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de
+          dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora coordena a equipe do
+          projeto “Desenvolvimento de sistemas e análises espaciais”, participando do desenvolvimento de
+          sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação
+          de artigos científicos e de documentos técnicos ou de divulgação científica.<br/><br/>
+          <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4210066U4" target="_blank">Currículo lattes</a></strong><br/>
+          <strong>Email:</strong> avancini@cncflora.jbrj.gov.br
+        </p>
+      </div>
   </div>
-</div>
-<div class="box-section col-sm-12 col-md-12 col-lg-12">
-<br/>
-<h3>Equipe</h3>
-<div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
-  <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-  </div>
-  <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-  </div>
-  <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-  </div>
-  <div class="item">
-      <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho:</strong> Especialização em Meio Ambiente pela COPPE/UFRJ (2012), graduado em Ciências Biológicas (Bacharelado) pela Universidade Santa Úrsula - USU (2009). Possui experiência em Coleções Biológicas e Taxonomia Vegetal. No CNCFlora é coordenador substituto do projeto “Avaliação do risco de extinção da flora brasileira”, participando da análise de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-  </div>
- </div>
 </div>
