Adiciona livro de áreas prioritárias.

--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -35,3 +35,24 @@
       O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
   </div>
 </div>
+<div class="box-section box-project ">
+  <div class="project-img col-sm-4 col-md-4 col-lg-4" >
+    <a href="http://cncflora.jbrj.gov.br/Livro_%C3%A1reas_priorit%C3%A1rias2014.pdf">
+      <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" />
+    </a>
+  </div>
+
+  <div class="description col-sm-8 col-md-8 col-lg-8">
+    <h4><a href="">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
+    <p>
+      O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
+      e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
+      mapas das áreas prioritárias para conservação e uso sustentável da flora brasileira ameaçada de
+      extinção para cada bioma e para todo o território nacional. A publicação tem caráter oficial e irá
+      direcionar políticas públicas para a conservação de 2.107 espécies ameaçadas, em nível federal e
+      estadual, munindo tomadores de decisão com informações técnicas de alta qualidade e precisão.
+      É a primeira vez que o Brasil tem um mapa de áreas prioritárias para a conservação de plantas,
+      portanto, as oportunidades são enormes.
+    </p>
+  </div>
+</div>
