--- a/templates/home.html
+++ b/templates/home.html
@@ -101,10 +101,13 @@
       </section>
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="#" class="image left box-img"><img src="{{static_url}}/images/img10.jpg" alt="" /></a>
+          <a href="#" class="image left box-img"><img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" alt="" /></a>
           <div class="inner">
-            <h3>The Third Thing</h3>
-            <p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+            <h3>Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</h3>
+            <p>O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
+              e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
+              mapas das áreas prioritárias para conservação e uso sustentável da flora brasileira ameaçada de
+              extinção para cada bioma e para todo o território nacional.</p>
           </div>
         </div>
       </section>
