--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -50,37 +50,37 @@
   <h3>Produtos</h3>
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-      <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
+      <div class="img breve">
+      <a href=""  data-toggle="modal" data-target="#breve-one">
         <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg"/>
     <div class="portfolio-overlay">
         <br/>
-        <p>Livro Vermelho da flora do Brasil, 2014</p>
+        <p>Em Breve<br/><br/> Livro Vermelho da flora do Brasil, 2014</p>
 
     </div>
     </a>
     </div>
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-      <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
+      <div class="img breve">
+      <a href=""  data-toggle="modal" data-target="#breve-two">
         <img src="{{static_url}}/images/projetos/lista-vermelha/Projeto Capa.jpg"/>
 
     <div class="portfolio-overlay">
         <br/>
-        <p>Manual Operacional Avaliação de Risco de Extinção das Espécies Raras do Cerrado</p>
+        <p>Em Breve<br/><br/> Manual Operacional Avaliação de Risco de Extinção das Espécies Raras do Cerrado</p>
 
     </div>
     </a>
     </div>
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-      <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-        <img src="{{static_url}}/images/projetos/lista-vermelha/Guia_de_Comentarios.jpg"/>
+      <div class="img breve">
+      <a href="" data-toggle="modal" data-target="#breve-three">
+        <img src="{{static_url}}/images/projetos/lista-vermelha/capa guia de validação.png"/>
     <div class="portfolio-overlay">
         <br/>
-        <p>Avaliação de risco de extinção</p>
+        <p>Em Breve<br/><br/> Avaliação de risco de extinção</p>
 
     </div>
     </a>
@@ -93,6 +93,18 @@
     <div class="portfolio-overlay">
         <br/>
         <p>Livro Vermelho da flora do Brasil, 2013</p>
+
+    </div>
+    </a>
+    </div>
+   </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+      <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
+        <img src="{{static_url}}/images/documentos/publicacoes/publicacoes1.png"/>
+    <div class="portfolio-overlay">
+        <br/>
+        <p>Manual  Operacional Avaliação de Risco de Extinção das Espécies da Flora Brasileira</p>
 
     </div>
     </a>
@@ -229,4 +241,47 @@
 	socioambiental, recuperação de áreas degradadas, educação ambiental, botânica e ecologia.</p>
    </div>
    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="breve-one" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+      </div>
+      <div class="modal-body">
+        Livro Vermelho da flora do Brasil, 2014.
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="breve-two" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+      </div>
+      <div class="modal-body">
+        Manual Operacional Avaliação de Risco de Extinção das Espécies Raras do Cerrado.
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="breve-three" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+      </div>
+      <div class="modal-body">
+        Avaliação de risco de extinção.
+      </div>
+    </div>
+  </div>
 </div>
