Pequenos ajustes: posição da busca interna, link para wiki no rodape, ordem dos produtos na lista vermelha.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -165,6 +165,7 @@
 							<li><a href="{{base_url}}/pt-br/livros" class="icon ">Livros</a></li>
 							<li><a href="{{base_url}}/pt-br/equipe" class="icon ">Equipe</a></li>
 							<li><a href="" class="icon link-contato">Contato</a></li>
+							<li><a href="http://cncflora.jbrj.gov.br/wiki/doku.php" class="icon ">Wiki</a></li>
 					</ul>
 				</div>
 				</section>
