--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -34,6 +34,15 @@
   <strong>Email:</strong> edalcin@jbrj.org</p>
   </div>
 <div class="item">
+  <h3>Maria Lúcia</h3>
+  <img src="{{static_url}}/images/equipe/Maria.jpg"/>
+  <p>É Doutora pela Escola Nacional de Botânica
+    Tropical, possui graduação em Engenharia Florestal pela Universidade de
+    Brasília. Tem experiência na área de conservação e fortalecimento de jardins
+    botânicos. No Instituto de Pesquisas Jardim Botânico do Rio de Janeiro ocupa
+    o cargo de Tecnologista Senior III e coordena o projeto 'Conservação Ex Situ'.</p>
+</div>
+<div class="item">
   <h3>Ricardo Avancini Fernandes</h3>
   <h4 class="area"><strong>Coordenador de Desenvolvimento de Sistemas e SIG</strong></h4>
   <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
@@ -245,11 +254,15 @@
     </p>
 </div>
 <div class="item">
-  <h3>Maria Lúcia</h3>
-  <img src="{{static_url}}/images/equipe/Maria.jpg"/>
-  <p>É Doutora pela Escola Nacional de Botânica
-    Tropical, possui graduação em Engenharia Florestal pela Universidade de
-    Brasília. Tem experiência na área de conservação e fortalecimento de jardins
-    botânicos. No Instituto de Pesquisas Jardim Botânico do Rio de Janeiro ocupa
-    o cargo de Tecnologista Senior III e coordena o projeto 'Conservação Ex Situ'.</p>
+  <h3>Tamar Bajgielman</h3>
+  <img src="{{static_url}}/images/equipe/Tamar.jpg"/>
+  <p>
+  Tamar Bajgielman é Doutora em Antropologia pela University of Kent, UK,
+  Mestre em Etnobotânica pela mesma universidade e graduada em Ciências 
+  Biológicas pela Universidade Santa Úrsula.  Tem experiência na área de 
+  Antropologia, com ênfase em Antropologia Ambiental, atuando principalmente 
+  nos seguintes temas: ecologia política, etnoecologia, conservação e manejo de 
+  recursos naturais, agricultura, pesca artesanal, propriedade coletiva e acesso a 
+  recursos produtivos.
+  </p>
 </div>
