--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -1,13 +1,13 @@
 <h3>Livros</h3>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="">
+    <a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf">
       <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="">LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf">LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
     <p>
       Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
       que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
@@ -24,13 +24,13 @@
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="">
+    <a href="http://cncflora.jbrj.gov.br/LivroVermelho.pdf">
       <img src="{{static_url}}/images/livrovermelho.png" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="">LIVRO VERMELHO DA FLORA DO BRASIL</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelho.pdf">LIVRO VERMELHO DA FLORA DO BRASIL</a></h4>
     <p>
       O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
   </div>
@@ -43,7 +43,7 @@
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/Livro_%C3%A1reas_priorit%C3%A1rias2014.pdf">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
     <p>
       O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
       e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
