--- a/templates/content/pt-br/project/areas-prioritarias.html
+++ b/templates/content/pt-br/project/areas-prioritarias.html
@@ -77,9 +77,11 @@
     <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
       <div class="item">
         <img src="{{static_url}}/images/equipe/rafael.jpg"/>
-        <p><strong>Rafael Loyola</strong> Em Breve<br/>
+        <p><strong>Rafael Loyola</strong> 
+        é mineiro, doutor em Ecologia pela UNICAMP e Mestre em Ecologia, Conservação e Manejo da Vida Silvestre pela UFMG. É bolsista de produtividade em pesquisa do CNPq e professor do Departamento de Ecologia da UFG. Coordena o Laboratório de Biogeografia da Conservação (CB-Lab) que busca entender os efeitos das mudanças globais sobre a distribuição da biodiversidade no planeta e oferecer soluções científicas para suporte à tomada de decisão ambiental no Brasil.
+        <br/>
           <strong>Email:</strong> rdiasloyola@gmail.com<br/>
-          <a href="">Currículo lattes</a></p>
+          <a href="http://lattes.cnpq.br/7649189080736923">Currículo lattes</a></p>
         </div>
       <div class="item">
         <img src="{{static_url}}/images/equipe/daniele.jpg"/>
