--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -49,18 +49,43 @@
   <br/>
   <h3>Produtos</h3>
   <div class="doc">
+
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img breve">
+        <a href=""  data-toggle="modal" data-target="#breve-one">
+          <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg"/>
+          <div class="portfolio-overlay">
+              <br/>
+              <p>Em Breve<br/><br/> Livro Vermelho Plantas Raras do Cerrado, 2014</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img breve">
+        <a href=""  data-toggle="modal" data-target="#breve-two">
+          <img src="{{static_url}}/images/projetos/lista-vermelha/Projeto Capa.jpg"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Em Breve<br/><br/> Manual Operacional Avaliação de Risco de Extinção das Espécies Raras do Cerrado</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
-      <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-        <img src="{{static_url}}/images/livrovermelho.png"/>
-    <div class="portfolio-overlay">
-        <br/>
-        <p>Livro Vermelho da flora do Brasil, 2013</p>
-
-    </div>
-    </a>
-    </div>
+        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
+          <img src="{{static_url}}/images/livrovermelho.png"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Livro Vermelho da flora do Brasil, 2013</p>
+          </div>
+        </a>
+      </div>
    </div>
+
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
         <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
@@ -72,43 +97,21 @@
         </a>
       </div>
      </div>
+
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
-      <a href=""  data-toggle="modal" data-target="#breve-one">
-        <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg"/>
-    <div class="portfolio-overlay">
-        <br/>
-        <p>Em Breve<br/><br/> Livro Vermelho da flora do Brasil, 2014</p>
+      <div class="img">
+        <a href="{{static_url}}/pdf/publicacao/guia_metodologico.pdf">
+          <img src="{{static_url}}/images/documentos/publicacoes/guia_metodologico.png"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>
+            Guia Metodológico para especialistas: Validação de dados e comentários
+            </p>
+          </div>
+        </a>
+      </div>
+     </div>
 
-    </div>
-    </a>
-    </div>
-    </div>
-    <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
-      <a href=""  data-toggle="modal" data-target="#breve-two">
-        <img src="{{static_url}}/images/projetos/lista-vermelha/Projeto Capa.jpg"/>
-
-    <div class="portfolio-overlay">
-        <br/>
-        <p>Em Breve<br/><br/> Manual Operacional Avaliação de Risco de Extinção das Espécies Raras do Cerrado</p>
-
-    </div>
-    </a>
-    </div>
-    </div>
-    <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
-      <a href="" data-toggle="modal" data-target="#breve-three">
-        <img src="{{static_url}}/images/projetos/lista-vermelha/capa guia de validação.png"/>
-    <div class="portfolio-overlay">
-        <br/>
-        <p>Em Breve<br/><br/> Avaliação de risco de extinção</p>
-
-    </div>
-    </a>
-    </div>
-    </div>
   </div>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
