--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -1,10 +1,13 @@
 <h3>Sistemas</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-    <p>Dentre como atribuições fazer CNCFlora, ESTA uma de avaliar o Risco de extinção das Espécies da flora brasileira. Pará ISSO FOI Desenvolvido hum Sistema de Informação that permite uma Participação e Integração de Uma Rede de Especialistas e that armazena, organiza e Gerencia de INFORMAÇÕES Científicas necessárias Pará como avaliações de Risco de extinção de Espécies da flora.</font></font></p>
-    <p>A Metodologia adotada permite uma padronização dos esforços Nacionais, assegurando rigor analyses Científico como. A Lista Vermelha Produzida Pelo CNCFlora E Dinâmica e do conforme avaliações como São realizadas OU alteradas, São inseridas no portal, havendo Uma Constante atualização. Disso de Além, que sejam considerados criterios Biológicos e utiliza o Sistema de criterios e CATEGORIAS da IUCN Pará avaliar o Risco de extinção das Espécies.</p>
+<p>
+O Centro Nacional de Conservação da Flora (CNCFlora) tem a missão de fornecer, ao Ministério do Meio Ambiente e a outras instâncias do governo brasileiro, informação técnica e científica para nortear decisões políticas relacionadas à conservação da flora brasileira.
+</p>
+<p>
+Para tanto planejou-se a criação de um sistema de informação para o apoio e habilitação do complexo trabalho a ser desenvolvido, dada a escala da flora do Brasil. Tendo essa escala em vista, um sistema pensando em toda a rede de participação e flora do Brasil poderia também ser escalado a rede e flora mundiais.
+</p>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-  <br/>
   <h3>Equipe</h3>
   <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
       <div class="item">
