--- a/templates/home.html
+++ b/templates/home.html
@@ -101,9 +101,9 @@
       </section>
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="#" class="image left box-img"><img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" alt="" /></a>
+          <a href="{{base_url}}/pt-br/projetos/areas-prioritarias" class="image left box-img"><img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" alt="" /></a>
           <div class="inner">
-            <h3>Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</h3>
+            <h3>Áreas prioritárias para conservação</h3>
             <p>O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
               e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
               mapas das áreas prioritárias para conservação e uso sustentável da flora brasileira ameaçada de
@@ -113,10 +113,12 @@
       </section>
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="#" class="image left box-img"><img src="{{static_url}}/images/img5.jpg" alt="" /></a>
+          <a href="{{base_url}}/pt-br/projeto/planejamento-de-acoes" class="image left box-img"><img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" alt="" /></a>
           <div class="inner">
-            <h3>The Fourth Thing</h3>
-            <p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+            <h3>PAN Faveiro de Wilson</h3>
+            <p> 
+            O Plano de Ação Nacional do faveiro-de-wilson (Dimorphandra wilsonii Rizzini), espécie Criticamente em perigo (CR) e endêmica de Minas Gerais, contém a melhor informação disponível sobre a espécie, além do planejamento com as ações necessárias para sua conservação.
+            </p>
           </div>
         </div>
       </section>
