--- a/templates/content/pt-br/project/ex-situ.html
+++ b/templates/content/pt-br/project/ex-situ.html
@@ -1,61 +1,48 @@
 <h3>Ex-situ</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-    <p>Dentre como atribuições fazer CNCFlora, ESTA uma de avaliar o Risco de extinção das Espécies da flora brasileira. Pará ISSO FOI Desenvolvido hum Sistema de Informação that permite uma Participação e Integração de Uma Rede de Especialistas e that armazena, organiza e Gerencia de INFORMAÇÕES Científicas necessárias Pará como avaliações de Risco de extinção de Espécies da flora.</font></font></p>
-    <p>A Metodologia adotada permite uma padronização dos esforços Nacionais, assegurando rigor analyses Científico como. A Lista Vermelha Produzida Pelo CNCFlora E Dinâmica e do conforme avaliações como São realizadas OU alteradas, São inseridas no portal, havendo Uma Constante atualização. Disso de Além, que sejam considerados criterios Biológicos e utiliza o Sistema de criterios e CATEGORIAS da IUCN Pará avaliar o Risco de extinção das Espécies.</p>
+  <p>
+  O Projeto Ex Situ é dedicado às plantas ameaçadas da flora brasileira e atua a partir de duas linhas de ação conexas: o aprimoramento e a ampliação das coleções ex situ de espécies ameaçadas e a integração das ações ex situ aos esforços de conservação integrada. Na primeira linha, o foco é em fortalecer as coleções e as instituições que as mantêm. A segunda linha de ação visa a otimização do uso dos recursos e das coleções ex situ para a conservação in situ. O objetivo fundamental do projeto é evitar e reverter os processos de extinção da flora, através da conservação de germoplasma em coleções de plantas cultivadas, bancos de sementes, criopreservação e cultura em vitro, e da reintrodução das espécies em seus ambientes naturais. 
+  </p>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <br/>
   <h3>Produtos</h3>
   <div class="doc">
-    <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-          <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg"/>
-          <div class="portfolio-overlay">
-            <br/>
-            <p>Livro Vermelho da flora do Brasil, 2014</p>
 
-          </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img breve">
+        <a href="#"  data-toggle="modal" data-target="#breve-one">
+        <img src="{{static_url}}/images/projetos/ex-situ/capa_diagnostico1.png"/>
+        <div class="portfolio-overlay">
+          <br/>
+          <p>
+             Em Breve<br/><br/>
+             Diagnóstico sobre a conservação ex situ da Flora Ameaçada Brasileira
+          </p>
+          <br/>
+          <p></p>
+         </div>
         </a>
       </div>
     </div>
+
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-          <img src="{{static_url}}/images/projetos/lista-vermelha/Projeto Capa.jpg"/>
-
-          <div class="portfolio-overlay">
-            <br/>
-            <p>Manual Operacional Avaliação de Risco de Extinção das Espécies Raras do Cerrado</p>
-
-          </div>
+      <div class="img breve">
+        <a href="#"  data-toggle="modal" data-target="#breve-one">
+        <img src="{{static_url}}/images/projetos/ex-situ/capa_estrategia1.png"/>
+        <div class="portfolio-overlay">
+          <br/>
+          <p>
+             Em Breve<br/><br/>
+             Estratégia Nacional para conservação ex situ
+          </p>
+          <br/>
+          <p></p>
+         </div>
         </a>
       </div>
     </div>
-    <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-          <img src="{{static_url}}/images/projetos/lista-vermelha/Guia_de_Comentarios.jpg"/>
-          <div class="portfolio-overlay">
-            <br/>
-            <p>Avaliação de risco de extinção</p>
 
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-          <img src="{{static_url}}/images/livrovermelho.png"/>
-          <div class="portfolio-overlay">
-            <br/>
-            <p>Livro Vermelho da flora do Brasil, 2013</p>
-
-          </div>
-        </a>
-      </div>
-    </div>
   </div>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
