--- a/templates/content/pt-br/project/index.html
+++ b/templates/content/pt-br/project/index.html
@@ -25,7 +25,11 @@
   <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/areas-prioritarias">Áreas Prioritárias</a></h4>
     <p>
+    No início de 2014, foi instituído o Programa Nacional de Conservação das Espécies Ameaçadas de Extinção – Pró-Espécies. Nesse programa, foi atribuída ao Instituto de Pesquisas Jardim Botânico do Rio de Janeiro a elaboração de mapas de áreas prioritárias para conservação da flora. A partir dessa atribuição foi desenvolvido o projeto Áreas prioritárias para conservação e uso sustentável da flora brasileira ameaçada de extinção que tem como objetivo indicar áreas prioritárias para conservação e uso sustentável em todo o território nacional, para que o Brasil diminua o risco de extinção das espécies da flora.
+
+    <!--
       Em 2013, o CNCFlora publicou o Livro vermelho da flora do Brasil. Essa lista de espécies ameaçadas de extinção é uma ferramenta que indica quais plantas devem receber, prioritariamente, atenção por parte dos tomadores de decisão e da sociedade, sob pena de não estarem disponíveis para a geração futura, gerando perda de serviços ecossistêmicos caso não recebam a atenção devida. Porém, a lista não indica onde é preciso agir. É preciso elaborar documentos que guiem ações de conservação em locais estratégicos, visando impedir ou reverter o declínio populacional de espécies.
+      -->
     </p>
   </div>
 </div>
@@ -34,12 +38,7 @@
   <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/ex-situ">Ex-situ</a></h4>
     <p>
-      Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de espécies da flora do
-      Brasil. Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, Red List Authority da
-      IUCN, cuja meta é avaliar o risco de extinção de todas as espécies da flora brasileira até o ano
-      de 2020, atendendo a meta 2 da “Estratégia Global de Conservação de Plantas” (sigla em
-      inglês GSPC) e a portaria 43.2014 do Ministério do Meio Ambiente (MMA) que institui o
-      programa Pró-espécies.
+    O Projeto Ex Situ é dedicado às plantas ameaçadas da flora brasileira e atua a partir de duas linhas de ação conexas: o aprimoramento e a ampliação das coleções ex situ de espécies ameaçadas e a integração das ações ex situ aos esforços de conservação integrada. Na primeira linha, o foco é em fortalecer as coleções e as instituições que as mantêm. A segunda linha de ação visa a otimização do uso dos recursos e das coleções ex situ para a conservação in situ. O objetivo fundamental do projeto é evitar e reverter os processos de extinção da flora, através da conservação de germoplasma em coleções de plantas cultivadas, bancos de sementes, criopreservação e cultura em vitro, e da reintrodução das espécies em seus ambientes naturais. 
     </p>
   </div>
 </div>
@@ -48,12 +47,10 @@
   <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/sistemas">Sistemas</a></h4>
     <p>
-      Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de espécies da flora do
-      Brasil. Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, Red List Authority da
-      IUCN, cuja meta é avaliar o risco de extinção de todas as espécies da flora brasileira até o ano
-      de 2020, atendendo a meta 2 da “Estratégia Global de Conservação de Plantas” (sigla em
-      inglês GSPC) e a portaria 43.2014 do Ministério do Meio Ambiente (MMA) que institui o
-      programa Pró-espécies.
-    </p>
+    
+    O Centro Nacional de Conservação da Flora (CNCFlora) tem a missão de fornecer, ao Ministério do Meio Ambiente e a outras instâncias do governo brasileiro, informação técnica e científica para nortear decisões políticas relacionadas à conservação da flora brasileira.
+    
+    Para tanto planejou-se a criação de um sistema de informação para o apoio e habilitação do complexo trabalho a ser desenvolvido, dada a escala da flora do Brasil. Tendo essa escala em vista, um sistema pensando em toda a rede de participação e flora do Brasil poderia também ser escalado a rede e flora mundiais.
+   </p>
   </div>
 </div>
