--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -35,7 +35,7 @@
               speed: 1000,
               auto: true,
               controls: true,
-              infiniteLoop: false,
+              infiniteLoop: true,
               hideControlOnEnd: true
 
             });
